# nyc-cab-analytics

./: .env.example  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml  run.ps1
airflow_duckdb_s3/: .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  requirements-airflow.txt  requirements-pipeline.txt
airflow_duckdb_s3/macros/: parameters.sql
airflow_duckdb_s3/models/: schema.yml  stichtag_report.sql
airflow_duckdb_s3/openshift/: rbac.yaml  s3-secret.example.yaml
airflow_duckdb_s3/runner/: run_dbt.py
airflow_duckdb_s3/tests/: test_runner.py
hybrid_trino_duckdb/: .dockerignore  .env.example  .gitignore  Dockerfile.airflow  Dockerfile.pipeline  Dockerfile.validation  README.md  airflow-local.ps1  airflow-local.sh  dbt-docs.ps1  dbt-docs.sh  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  requirements-airflow.txt  requirements-pipeline.txt  requirements-validation.txt  run.ps1  run.sh
hybrid_trino_duckdb/contracts/: account.json  customer.json  transactions.json
hybrid_trino_duckdb/docs/: stackable-airflow.md
hybrid_trino_duckdb/kubernetes/: hybrid-pipeline-secret.example.yaml  rbac.yaml
hybrid_trino_duckdb/models/: sources.yml
hybrid_trino_duckdb/sql/: account.sql  account_bootstrap.sql  customer.sql  customer_bootstrap.sql  transactions.sql
hybrid_trino_duckdb/tests/: assert_account_validity_does_not_overlap.sql  assert_customer_validity_does_not_overlap.sql  assert_one_current_account_version.sql  test_delta_pipeline.py  (+3 more)
(+65 files in other folders)
