[project]
name = "airflow-duckdb-s3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dbt-core==1.9.4",
  "dbt-duckdb==1.9.3",
  "duckdb==1.2.2",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["."]
